<resources>
    <string name="app_name">NewSwasthyaIngitOPD</string>
    <string name="providing_the_best_telemedicine_solutions_for_the_people_of_west_bengal">স্বাস্থ্য ও পরিবার কল্যাণ দপ্তর, পশ্চিমবঙ্গ সরকারের টেলিমেডিসিন পরিষেবা</string>
    <string name="government_of_west_bengal">Government of West Bengal</string>
    <string name="department_of_health_and_family_welfare_wb">Department of Health and Family Welfare - WB</string>
    <string name="national_health_mission">National Health Mission</string>
    <string name="swasthya_ingit">Swasthya Ingit</string>
    <string name="skip">Skip</string>
    <string name="talk_to_doctor_therapist_face_to_face">Talk to a doctor or therapist face-to-face</string>
    <string name="app_enable_to_generate_token_and_look_for_the_consultation">App enables to generate token and book for the consultation.</string>
    <string name="add_your_family_member">Add your family members</string>
    <string name="get_the_holistic_care_of_your_family">Get the holistic care of your family and overall well-being.</string>
    <string name="your_prescription_record_organized_are_its_best">Your prescriptions, records organized are at its best</string>
    <string name="get_instant_list_access_all_your_mrs">Get instant list to access all your MRs and prescriptions endlessly.</string>
    <string name="login_or_register_to_swasthya_ingit">Login or register to Swasthya Ingit</string>
    <string name="login_to_swasthya_ingit">Login to Swasthya Ingit</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="valid_enter_mobile_number">Please enter valid mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_mandatory">Mobile<font color='red'>*</font></string>
    <string name="text_continue">Continue</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_sent_otp">We have sent a verification code to</string>
    <string name="verify">Verify</string>
    <string name="_00_30_sec">00:30 sec</string>
    <string name="didnt_receive_code">Didn’t you receive any code?</string>
    <string name="build_your_health_profile">Build your health profile</string>
    <string name="first_name">First name<font color='red'>*</font></string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last name<font color='red'>*</font></string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email">Email</string>
    <string name="email_mandatory">Email<font color='red'>*</font></string>
    <string name="enter_email">Enter email</string>
    <string name="date_of_birth">Date of birth<font color='red'>*</font></string>
    <string name="age_patient">Age<font color='red'>*</font></string>
    <string name="date_of_birth_title">Date of birth</string>
    <string name="yyyy_mm_dd">dd-mm-yyyy</string>
    <string name="gender">Gender<font color='red'>*</font></string>
    <string name="gender_title">Gender</string>
    <string name="male_female">Male - Female</string>
    <string name="district">District<font color='red'>*</font></string>
    <string name="district_title">District</string>
    <string name="select_district">Select District</string>
    <string name="select_city">Select City</string>
    <string name="city">City<font color='red'>*</font></string>
    <string name="city2">Village/City<font color='red'>*</font></string>
    <string name="city_title">City</string>
    <string name="block">Block</string>
    <string name="select_block">Select block</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address<font color='red'>*</font></string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="pincode">Pincode<font color='red'>*</font></string>
    <string name="pincode_title">Pincode</string>
    <string name="proceed">Proceed</string>
    <string name="resend">\  Resend</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tg">TG</string>
    <string name="please_enter_firstname">Please enter First Name</string>
    <string name="please_enter_lastname">Please enter Last Name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="please_enter_six_digit_pincode">Please enter 6 digit Pincode</string>
    <string name="please_enter_dob">Please select DOB</string>
    <string name="please_enter_dob_year">Please select years</string>
    <string name="please_enter_dob_month">Please select months</string>
    <string name="hello">Hello,</string>
    <string name="welcome_to_swasthya_ingit">Welcome to Swasthya Ingit!</string>
    <string name="welcome_to_swasthya_ingit2">! Welcome\nto Swasthya Ingit!</string>
    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_get_care">Get care</string>
    <string name="menu_consultation">Consultation</string>
    <string name="menu_profile">Profile</string>
    <string name="simple_steps_to_consult">Simple steps to consult</string>
    <string name="new_guidelines_for_home_isolation">New guidelines for Home isolation</string>
    <string name="for_covid_19_cases">For COVID-19 cases</string>
    <string name="biomedical_waste_disposal">Biomedical/Waste disposal</string>
    <string name="know_more">Know more</string>
    <string name="not_feeling_too_well">Not feeling too well?</string>
    <string name="find_and_consult_a_doctor_instantly_via_video_consultation_for_free">Find and consult a doctor instantly via video consultation for free</string>
    <string name="find_me_the_right_doctor">Find me the right doctor</string>
    <string name="your_consultation_is_booked_and_token_no_is_ch1">Your consultation is booked and token no. is <b>\CH1</b>.</string>
    <string name="please_choose_opd_type">Please choose opd type</string>
    <string name="general_opd">General</string>
    <string name="special_opd">Speciality</string>
    <string name="consult_now">Consult now</string>
    <string name="select_hospital">Select hospital</string>
    <string name="enter_hospital_name">Enter hospital name</string>
    <string name="upload_medical_record_s">Upload Medical Record (s)</string>
    <string name="format_is_jpeg_png_pdf_and_max_limit_10_files_less_than_5mb">Format is JPEG, PNG, PDF and Max limit 10 files. Less than 5MB</string>
    <string name="format_is_jpeg_png">Format is JPEG, PNG</string>
    <string name="fever">Fever</string>
    <string name="_2_pages">2 pages</string>
    <string name="find_me_right_doctor">Find me the right doctor</string>
    <string name="add_family_members">Add family member</string>
    <string name="update_family_member">Update family member</string>
    <string name="plus_add_family_member">+ Add family member</string>
    <string name="edit_profile">Update Profile</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="waiting_room">Waiting room</string>
    <string name="_64kb">64kb</string>
    <string name="pdf">pdf</string>
    <string name="are_you_sure_you_don_t_want_to_continue_with_doctor">Are you sure you don’t want to continue with doctor?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_i_am_sure">Yes, I am sure</string>
    <string name="dear_user_token_sent_to_your_mobile_1201739227950662_is_your_patient_id_ch1_is_your_token_number">Dear User, Token sent to your mobile. \nYour token number is </string>
    <string name="do_it_later">Do it later</string>
    <string name="continue_to_waiting_room">Continue to waiting room</string>
    <string name="exit_room">Exit Room</string>
    <string name="your_current_queue_number_is_06_please_keep_patience"><font color='#99FFFFFF'>Your current queue number is 06.</font> \n<font color='#00A500'>Please keep patience...</font></string>
    <string name="_08">08</string>
    <string name="doctor_s_nonline">Doctor’s \nonline</string>
    <string name="doctor_s_in_nconsultations">Doctor’s in\nconsultations</string>
    <string name="_05">05</string>
    <string name="your_basic_details">Your basic details</string>
    <string name="name">Name</string>
    <string name="token_no">Token no.</string>
    <string name="ch1">CH\1</string>
    <string name="id">ID</string>
    <string name="_1201739227950662">1201739227950662</string>
    <string name="age">Age</string>
    <string name="_27_years">27 Years</string>
    <string name="title_gender">Gender</string>
    <string name="title_female">Female</string>
    <string name="plot_2_park_street_n_alipurduar_736121_n_west_bengal">Plot 2, Park Street,\nAlipurduar, 736121,\nWest Bengal</string>
    <string name="title_address">Address</string>
    <string name="your_medical_records">Your medical records</string>
    <string name="are_you_sure_you_want_to_exit_room_don_t_worry_your_booking_will_not_be_cancelled">Are you sure you want to exit room? Don’t worry, your booking will not be cancelled</string>
    <string name="_00">00</string>
    <string name="_29">30</string>
    <string name="swastya_ingit_opd_psychiatrist">Swastya Ingit OPD Psychiatrist</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="minutes">Minutes</string>
    <string name="secs">Secs</string>
    <string name="connect_now">Connect now</string>
    <string name="doctor_will_be_receiving_call_in_a_minute_please_wait">Doctor will be receiving call in a \nminute. Please wait…</string>
    <string name="connecting">Connecting…</string>
    <string name="title_last_name">Last name<font color='red'>*</font></string>
    <string name="title_age">Age<font color='red'>*</font></string>
    <string name="select_dob">Select DOB</string>
    <string name="relation">Relation<font color='red'>*</font></string>
    <string name="title_relation">Relation</string>
    <string name="select_family_member">Select family member</string>
    <string name="add_member">+Add member</string>
    <string name="please_select_relation">Please select relation</string>
    <string name="mother">Mother</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view_and_edit_your_profile">View and edit your profile</string>
    <string name="family_members">Family members</string>
    <string name="_91">+91</string>
    <string name="yes">Yes</string>
    <string name="duration_title">Duration</string>
    <string name="severity_title">Severity</string>
    <string name="red_cedar_asthma">Red-cedar asthma</string>
    <string name="prescription_title">cromolyn sodium\n20mg/ml eye drops</string>
    <string name="still_have">Still have</string>
    <string name="mid">Mid</string>
    <string name="less_than_three_month">Less than 3 months</string>
    <string name="bd">BD</string>
    <string name="dose_value">1</string>
    <string name="drops">Drops</string>
    <string name="three_week">3 weeks</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registered">Registered</string>
    <string name="menu_add_patient">Add patient</string>
    <string name="menu_cases">Cases</string>
    <string name="result">Result</string>
    <string name="camera">Camera</string>
    <string name="select_document">Select document</string>
    <string name="gallery">Gallery</string>
</resources>