<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/action_reports"
        android:enabled="true"
        android:icon="@drawable/ic_reports"
        android:title="@string/menu_reports" />
    <item
        android:id="@+id/action_getcare"
        android:enabled="true"
        android:title="@string/menu_get_care" />

    <item
        android:id="@+id/action_consultation"
        android:enabled="true"
        android:icon="@drawable/ic_consultation"
        android:title="@string/menu_consultation" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile" />
</menu>