<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@color/card_bg"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvAllergyName"
        style="@style/semi_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/red_cedar_asthma"
        android:textAlignment="textStart"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FF4040" />

    <LinearLayout
        android:id="@+id/layStillHave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvAllergyName">

        <TextView
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/still_have"
            android:textColor="@color/allergy_text_color"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvStillHave"
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="@color/allergy_hint_text_color"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layStillHave">

        <TextView
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duration_title"
            android:textColor="@color/allergy_text_color"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvDuration"
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/less_than_three_month"
            android:textColor="@color/allergy_hint_text_color"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layDuration">

        <TextView
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/severity_title"
            android:textColor="@color/allergy_text_color"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvSeverity"
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mid"
            android:textColor="@color/allergy_hint_text_color"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>