<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@color/card_bg"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_5sdp"
    android:paddingVertical="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvPrescription"
        style="@style/regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_weight="1.5"
        android:text="@string/prescription_title"
        android:textAlignment="textStart"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrequency"
        style="@style/regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_weight="1"
        android:text="@string/bd"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDose"
        style="@style/regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_weight="1"
        android:text="@string/dose_value"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvType"
        style="@style/regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_weight="1"
        android:text="@string/drops"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDuration"
        style="@style/regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_weight="1"
        android:text="@string/three_week"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FF4040" />

</LinearLayout>