<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corner_white_rounded"
    android:padding="@dimen/_10sdp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tvCamera"
        style="@style/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGallery"
        style="@style/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvCamera" />

    <TextView
        android:id="@+id/tvFile"
        style="@style/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/select_document"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvGallery" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvFile" />

</androidx.constraintlayout.widget.ConstraintLayout>